--- a/wildBoarRunningclub/src/index.css
+++ b/wildBoarRunningclub/src/index.css
@@ -11,8 +11,10 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
+  
   --background: #2c2d2e;
+  --primary: #333;
+  --text-primary: rgb(179, 72, 11);
 
 }
 
@@ -39,21 +41,32 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  height: 4rem;
-  background: #333;
-  color: rgb(179, 72, 11);
+  height: 6rem;
+  background: var(--primary);
+  color: var(--text-primary);
   display: flex;
   align-items: center;
   padding: 0 2rem;
   justify-content: space-between;
 
   h1 {
-    font-size: 1.25rem;
+    font-size: 2rem;
     font-weight: 700;
     color: var(--text-primary);
   }
+
+  img {
+    height: 4rem;
+    width: 4rem;
+  }
+  
 }
 
+.header-logo {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
 
 .header::before {
   content: "";
@@ -65,7 +78,7 @@ nav {
   gap: 1rem;
   display: flex;
   margin-right: 3rem;
-    
+  font-size: 1.5rem;
   a {
     text-decoration: none;
     color: var(--text-secondary);
@@ -89,7 +102,7 @@ nav {
     display: none;
 
     & h1 {
-    text-align: left;
+      text-align: left;
     }
   }
 
