--- a/wildBoarRunningclub/src/components/RunnerCard.module.css
+++ b/wildBoarRunningclub/src/components/RunnerCard.module.css
@@ -12,14 +12,15 @@
         font-size: 1.5rem;
         color: var(--text-secondary);
     }
-    
+
     & h2 {
         font-size: 2rem;
         max-width: 50%;
         text-align: center;
 
         display: -webkit-box;
-        -webkit-line-clamp: 2;   
+        -webkit-line-clamp: 2;
+        line-clamp: 2;   
         -webkit-box-orient: vertical;
         overflow: hidden;
     }
