fix styles and delete app.css

--- a/wildBoarRunningclub/src/components/Classification.module.css
+++ b/wildBoarRunningclub/src/components/Classification.module.css
@@ -1,5 +1,7 @@
 .classificationList {
     display: flex;
     flex-direction: column;
+    text-align: center;
+    align-items: center;
     gap: 1rem;
 }
