--- a/wildBoarRunningclub/src/components/RunnerCard.module.css
+++ b/wildBoarRunningclub/src/components/RunnerCard.module.css
@@ -6,6 +6,7 @@
     padding: 1rem 4rem 1rem 4rem;
     border-radius: 3rem;
     max-height: 5rem;
+    width: 80%;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
     
     & h3 {
