--- a/wildBoarRunningclub/src/index.css
+++ b/wildBoarRunningclub/src/index.css
@@ -7,23 +7,18 @@
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  
   --background: #2c2d2e;
   --primary: #333;
   --text-primary: rgb(179, 72, 11);
-
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  
 }
-
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 h1 {
@@ -37,7 +32,7 @@ h1 {
 
 /* Header */
 header {
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
   width: 100%;
@@ -77,7 +72,6 @@ nav {
   align-items: center;
   gap: 1rem;
   display: flex;
-  margin-right: 3rem;
   font-size: 1.5rem;
   a {
     text-decoration: none;
