--- a/wildBoarRunningclub/src/components/RunnerCard.module.css
+++ b/wildBoarRunningclub/src/components/RunnerCard.module.css
@@ -26,3 +26,21 @@
         overflow: hidden;
     }
 }
+
+@media (max-width: 600px) {
+    .runnerCard {
+        gap: 1rem;
+        padding: 1rem 2rem 1rem 2rem;
+        max-height: 2rem;
+
+        & h2 {
+            font-size: 1.2rem;
+        }
+
+        & h3 {
+            font-size: 1.2rem;
+        }
+    }
+
+    
+}
