--- a/wildBoarRunningclub/src/components/RunnerCard.module.css
+++ b/wildBoarRunningclub/src/components/RunnerCard.module.css
@@ -31,10 +31,26 @@
     .runnerCard {
         gap: 1rem;
         padding: 1rem 2rem 1rem 2rem;
-        max-height: 2rem;
+        max-height: 1.75rem;
 
         & h2 {
             font-size: 1.2rem;
+        }
+
+        & h3 {
+            font-size: 1.2rem;
+        }
+    }
+}
+
+@media (max-width: 350px) {
+    .runnerCard {
+        gap: 1rem;
+        padding: 0.75rem 1.5rem 0.75rem 1.5rem;
+        max-height: 1.3rem;
+
+        & h2 {
+            font-size: 1rem;
         }
 
         & h3 {
