--- a/wildBoarRunningclub/src/index.css
+++ b/wildBoarRunningclub/src/index.css
@@ -119,3 +119,27 @@ nav {
   }
 
 }
+
+@media (max-width: 350px) {
+  header {
+    height: 4rem;
+  }
+
+  nav{
+    font-size: 1rem;
+    gap: 0.2rem;
+  }
+  
+  .header-logo {
+    img {
+      height: 3rem;
+      width: 3rem;
+    }
+
+    h1 {
+      font-size: 1.2rem;
+    }
+  }
+  
+
+}
